Add some unit tests